# gtk4_color_list

./: README.md  meson.build
data/: github.aeldemery.gtk4_color_list.gresource.xml  listview_colors.css
src/: Color.vala  ColorListModel.vala  ColorWidget.vala  Main.vala  MainWindow.vala
